syntax.output
Grammar

    0 $accept: program $end

    1 program: header declarations subprograms comp_statement T_DOT

    2 header: T_PROGRAM T_ID T_SEMI
    3       | error

    4 declarations: constdefs typedefs vardefs
    5             | error

    6 constdefs: T_CONST constant_defs T_SEMI
    7          | %empty

    8 constant_defs: constant_defs T_SEMI T_ID T_EQU expression
    9              | T_ID T_EQU expression

   10 expression: expression T_RELOP expression
   11           | expression T_EQU expression
   12           | expression T_OROP expression
   13           | expression T_ADDOP expression
   14           | expression T_MULDIVANDOP expression
   15           | T_ADDOP expression
   16           | T_NOTOP expression
   17           | variable
   18           | T_ID T_LPAREN expressions T_RPAREN
   19           | T_LENGTH T_LPAREN expression T_RPAREN
   20           | constant
   21           | T_LPAREN expression T_RPAREN

   22 variable: T_ID
   23         | variable T_LBRACK expressions T_RBRACK
   24         | error

   25 expressions: expressions T_COMMA expression
   26            | expression

   27 constant: T_ICONST
   28         | T_RCONST
   29         | T_BCONST
   30         | T_CCONST
   31         | T_SCONST

   32 typedefs: T_TYPE type_defs T_SEMI
   33         | %empty

   34 type_defs: type_defs T_SEMI T_ID T_EQU type_def
   35          | T_ID T_EQU type_def

   36 type_def: T_ARRAY T_LBRACK dims T_RBRACK T_OF typename
   37         | T_LPAREN identifiers T_RPAREN
   38         | limit T_DOTDOT limit

   39 dims: dims T_COMMA limits
   40     | limits

   41 limits: limit T_DOTDOT limit
   42       | T_ID

   43 limit: sign T_ICONST
   44      | T_CCONST
   45      | T_BCONST
   46      | T_ADDOP T_ID
   47      | T_ID

   48 sign: T_ADDOP
   49     | %empty

   50 typename: T_INTEGER
   51         | T_REAL
   52         | T_BOOLEAN
   53         | T_CHAR
   54         | T_STRING
   55         | T_ID

   56 vardefs: T_VAR variable_defs T_SEMI
   57        | %empty

   58 variable_defs: variable_defs T_SEMI identifiers T_COLON typename
   59              | identifiers T_COLON typename

   60 identifiers: T_ID
   61            | identifiers T_COMMA T_ID

   62 subprograms: subprograms subprogram T_SEMI
   63            | %empty

   64 subprogram: sub_header T_SEMI T_FORWARD
   65           | sub_header T_SEMI declarations subprograms comp_statement

   66 sub_header: T_FUNCTION T_ID formal_parameters T_COLON typename
   67           | T_PROCEDURE T_ID formal_parameters
   68           | T_FUNCTION

   69 formal_parameters: T_LPAREN parameter_list T_RPAREN
   70                  | %empty

   71 parameter_list: parameter_list T_SEMI pass identifiers T_COLON typename
   72               | pass identifiers T_COLON typename

   73 pass: T_VAR
   74     | %empty

   75 comp_statement: T_BEGIN statements T_END

   76 statements: statements T_SEMI statement
   77           | statement
   78           | error

   79 statement: assignment
   80          | if_statement
   81          | while_statement
   82          | for_statement
   83          | subprogram_call
   84          | io_statement
   85          | comp_statement
   86          | %empty

   87 assignment: variable T_ASSIGN expression

   88 if_statement: T_IF expression T_THEN statement T_SEMI
   89             | T_IF expression T_THEN statement T_SEMI T_ELSE statement

   90 $@1: %empty

   91 while_statement: T_WHILE expression $@1 T_DO statement T_SEMI

   92 $@2: %empty

   93 for_statement: T_FOR T_ID T_ASSIGN iter_space $@2 T_DO statement

   94 iter_space: expression T_TO expression
   95           | expression T_DOWNTO expression

   96 subprogram_call: T_ID
   97                | T_ID T_LPAREN expression T_RPAREN

   98 io_statement: T_READ T_LPAREN read_list T_RPAREN
   99             | T_WRITE T_LPAREN write_list T_RPAREN

  100 read_list: read_list T_COMMA read_item
  101          | read_item

  102 read_item: variable

  103 write_list: write_list T_COMMA write_item
  104           | write_item
  105           | %empty

  106 write_item: expression


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 5 24 78
    T_PROGRAM <string> (258) 2
    T_CONST <string> (259) 6
    T_TYPE <string> (260) 32
    T_ARRAY <string> (261) 36
    T_OF <string> (262) 36
    T_VAR <string> (263) 56 73
    T_FORWARD <string> (264) 64
    T_FUNCTION <string> (265) 66 68
    T_PROCEDURE <string> (266) 67
    T_INTEGER <string> (267) 50
    T_REAL <string> (268) 51
    T_BOOLEAN <string> (269) 52
    T_CHAR <string> (270) 53
    T_STRING <string> (271) 54
    T_BEGIN <string> (272) 75
    T_END <string> (273) 75
    T_IF <string> (274) 88 89
    T_THEN <string> (275) 88 89
    T_ELSE <string> (276) 89
    T_WHILE <string> (277) 91
    T_DO <string> (278) 91 93
    T_FOR <string> (279) 93
    T_DOWNTO <string> (280) 95
    T_TO <string> (281) 94
    T_READ <string> (282) 98
    T_WRITE <string> (283) 99
    T_LENGTH <string> (284) 19
    T_ID <string> (285) 2 8 9 18 22 34 35 42 46 47 55 60 61 66 67 93 96 97
    T_SCONST <string> (286) 31
    T_ICONST <integer> (287) 27 43
    T_RCONST <real> (288) 28
    T_BCONST <boolean> (289) 29 45
    T_CCONST <character> (290) 30 44
    T_RELOP <string> (291) 10
    T_ADDOP <string> (292) 13 15 46 48
    T_OROP <string> (293) 12
    T_MULDIVANDOP <string> (294) 14
    T_NOTOP <string> (295) 16
    T_LPAREN <string> (296) 18 19 21 37 69 97 98 99
    T_RPAREN <string> (297) 18 19 21 37 69 97 98 99
    T_SEMI <string> (298) 2 6 8 32 34 56 58 62 64 65 71 76 88 89 91
    T_DOT <string> (299) 1
    T_COMMA <string> (300) 25 39 61 100 103
    T_COLON <string> (301) 58 59 66 71 72
    T_LBRACK <string> (302) 23 36
    T_RBRACK <string> (303) 23 36
    T_ASSIGN <string> (304) 87 93
    T_DOTDOT <string> (305) 38 41
    T_EQU <string> (306) 8 9 11 34 35


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program (53)
        on left: 1
        on right: 0
    header (54)
        on left: 2 3
        on right: 1
    declarations (55)
        on left: 4 5
        on right: 1 65
    constdefs (56)
        on left: 6 7
        on right: 4
    constant_defs (57)
        on left: 8 9
        on right: 6 8
    expression <string> (58)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 8 9 10 11 12 13 14 15 16 19 21 25 26 87 88 89 91 94 95 97 106
    variable <string> (59)
        on left: 22 23 24
        on right: 17 23 87 102
    expressions (60)
        on left: 25 26
        on right: 18 23 25
    constant <integer> (61)
        on left: 27 28 29 30 31
        on right: 20
    typedefs (62)
        on left: 32 33
        on right: 4
    type_defs <string> (63)
        on left: 34 35
        on right: 32 34
    type_def (64)
        on left: 36 37 38
        on right: 34 35
    dims (65)
        on left: 39 40
        on right: 36 39
    limits (66)
        on left: 41 42
        on right: 39 40
    limit (67)
        on left: 43 44 45 46 47
        on right: 38 41
    sign (68)
        on left: 48 49
        on right: 43
    typename <string> (69)
        on left: 50 51 52 53 54 55
        on right: 36 58 59 66 71 72
    vardefs (70)
        on left: 56 57
        on right: 4
    variable_defs (71)
        on left: 58 59
        on right: 56 58
    identifiers <string> (72)
        on left: 60 61
        on right: 37 58 59 61 71 72
    subprograms (73)
        on left: 62 63
        on right: 1 62 65
    subprogram (74)
        on left: 64 65
        on right: 62
    sub_header (75)
        on left: 66 67 68
        on right: 64 65
    formal_parameters (76)
        on left: 69 70
        on right: 66 67
    parameter_list (77)
        on left: 71 72
        on right: 69 71
    pass (78)
        on left: 73 74
        on right: 71 72
    comp_statement (79)
        on left: 75
        on right: 1 65 85
    statements (80)
        on left: 76 77 78
        on right: 75 76
    statement (81)
        on left: 79 80 81 82 83 84 85 86
        on right: 76 77 88 89 91 93
    assignment <string> (82)
        on left: 87
        on right: 79
    if_statement (83)
        on left: 88 89
        on right: 80
    while_statement (84)
        on left: 91
        on right: 81
    $@1 (85)
        on left: 90
        on right: 91
    for_statement (86)
        on left: 93
        on right: 82
    $@2 (87)
        on left: 92
        on right: 93
    iter_space <string> (88)
        on left: 94 95
        on right: 93
    subprogram_call (89)
        on left: 96 97
        on right: 83
    io_statement (90)
        on left: 98 99
        on right: 84
    read_list (91)
        on left: 100 101
        on right: 98 100
    read_item <string> (92)
        on left: 102
        on right: 100 101
    write_list (93)
        on left: 103 104 105
        on right: 99 103
    write_item (94)
        on left: 106
        on right: 103 104


State 0

    0 $accept: . program $end

    error      shift, and go to state 1
    T_PROGRAM  shift, and go to state 2

    program  go to state 3
    header   go to state 4


State 1

    3 header: error .

    $default  reduce using rule 3 (header)


State 2

    2 header: T_PROGRAM . T_ID T_SEMI

    T_ID  shift, and go to state 5


State 3

    0 $accept: program . $end

    $end  shift, and go to state 6


State 4

    1 program: header . declarations subprograms comp_statement T_DOT

    error    shift, and go to state 7
    T_CONST  shift, and go to state 8

    T_TYPE       reduce using rule 7 (constdefs)
    T_VAR        reduce using rule 7 (constdefs)
    T_FUNCTION   reduce using rule 7 (constdefs)
    T_PROCEDURE  reduce using rule 7 (constdefs)
    T_BEGIN      reduce using rule 7 (constdefs)

    declarations  go to state 9
    constdefs     go to state 10


State 5

    2 header: T_PROGRAM T_ID . T_SEMI

    T_SEMI  shift, and go to state 11


State 6

    0 $accept: program $end .

    $default  accept


State 7

    5 declarations: error .

    $default  reduce using rule 5 (declarations)


State 8

    6 constdefs: T_CONST . constant_defs T_SEMI

    T_ID  shift, and go to state 12

    constant_defs  go to state 13


State 9

    1 program: header declarations . subprograms comp_statement T_DOT

    $default  reduce using rule 63 (subprograms)

    subprograms  go to state 14


State 10

    4 declarations: constdefs . typedefs vardefs

    T_TYPE  shift, and go to state 15

    $default  reduce using rule 33 (typedefs)

    typedefs  go to state 16


State 11

    2 header: T_PROGRAM T_ID T_SEMI .

    $default  reduce using rule 2 (header)


State 12

    9 constant_defs: T_ID . T_EQU expression

    T_EQU  shift, and go to state 17


State 13

    6 constdefs: T_CONST constant_defs . T_SEMI
    8 constant_defs: constant_defs . T_SEMI T_ID T_EQU expression

    T_SEMI  shift, and go to state 18


State 14

    1 program: header declarations subprograms . comp_statement T_DOT
   62 subprograms: subprograms . subprogram T_SEMI

    T_FUNCTION   shift, and go to state 19
    T_PROCEDURE  shift, and go to state 20
    T_BEGIN      shift, and go to state 21

    subprogram      go to state 22
    sub_header      go to state 23
    comp_statement  go to state 24


State 15

   32 typedefs: T_TYPE . type_defs T_SEMI

    T_ID  shift, and go to state 25

    type_defs  go to state 26


State 16

    4 declarations: constdefs typedefs . vardefs

    T_VAR  shift, and go to state 27

    $default  reduce using rule 57 (vardefs)

    vardefs  go to state 28


State 17

    9 constant_defs: T_ID T_EQU . expression

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 40
    variable    go to state 41
    constant    go to state 42


State 18

    6 constdefs: T_CONST constant_defs T_SEMI .
    8 constant_defs: constant_defs T_SEMI . T_ID T_EQU expression

    T_ID  shift, and go to state 43

    $default  reduce using rule 6 (constdefs)


State 19

   66 sub_header: T_FUNCTION . T_ID formal_parameters T_COLON typename
   68           | T_FUNCTION .

    T_ID  shift, and go to state 44

    $default  reduce using rule 68 (sub_header)


State 20

   67 sub_header: T_PROCEDURE . T_ID formal_parameters

    T_ID  shift, and go to state 45


State 21

   75 comp_statement: T_BEGIN . statements T_END

    error    shift, and go to state 46
    T_BEGIN  shift, and go to state 21
    T_IF     shift, and go to state 47
    T_WHILE  shift, and go to state 48
    T_FOR    shift, and go to state 49
    T_READ   shift, and go to state 50
    T_WRITE  shift, and go to state 51
    T_ID     shift, and go to state 52

    T_END   reduce using rule 86 (statement)
    T_SEMI  reduce using rule 86 (statement)

    variable         go to state 53
    comp_statement   go to state 54
    statements       go to state 55
    statement        go to state 56
    assignment       go to state 57
    if_statement     go to state 58
    while_statement  go to state 59
    for_statement    go to state 60
    subprogram_call  go to state 61
    io_statement     go to state 62


State 22

   62 subprograms: subprograms subprogram . T_SEMI

    T_SEMI  shift, and go to state 63


State 23

   64 subprogram: sub_header . T_SEMI T_FORWARD
   65           | sub_header . T_SEMI declarations subprograms comp_statement

    T_SEMI  shift, and go to state 64


State 24

    1 program: header declarations subprograms comp_statement . T_DOT

    T_DOT  shift, and go to state 65


State 25

   35 type_defs: T_ID . T_EQU type_def

    T_EQU  shift, and go to state 66


State 26

   32 typedefs: T_TYPE type_defs . T_SEMI
   34 type_defs: type_defs . T_SEMI T_ID T_EQU type_def

    T_SEMI  shift, and go to state 67


State 27

   56 vardefs: T_VAR . variable_defs T_SEMI

    T_ID  shift, and go to state 68

    variable_defs  go to state 69
    identifiers    go to state 70


State 28

    4 declarations: constdefs typedefs vardefs .

    $default  reduce using rule 4 (declarations)


State 29

   24 variable: error .

    $default  reduce using rule 24 (variable)


State 30

   19 expression: T_LENGTH . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 71


State 31

   18 expression: T_ID . T_LPAREN expressions T_RPAREN
   22 variable: T_ID .

    T_LPAREN  shift, and go to state 72

    $default  reduce using rule 22 (variable)


State 32

   31 constant: T_SCONST .

    $default  reduce using rule 31 (constant)


State 33

   27 constant: T_ICONST .

    $default  reduce using rule 27 (constant)


State 34

   28 constant: T_RCONST .

    $default  reduce using rule 28 (constant)


State 35

   29 constant: T_BCONST .

    $default  reduce using rule 29 (constant)


State 36

   30 constant: T_CCONST .

    $default  reduce using rule 30 (constant)


State 37

   15 expression: T_ADDOP . expression

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 73
    variable    go to state 41
    constant    go to state 42


State 38

   16 expression: T_NOTOP . expression

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 74
    variable    go to state 41
    constant    go to state 42


State 39

   21 expression: T_LPAREN . expression T_RPAREN

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 75
    variable    go to state 41
    constant    go to state 42


State 40

    9 constant_defs: T_ID T_EQU expression .
   10 expression: expression . T_RELOP expression
   11           | expression . T_EQU expression
   12           | expression . T_OROP expression
   13           | expression . T_ADDOP expression
   14           | expression . T_MULDIVANDOP expression

    T_RELOP        shift, and go to state 76
    T_ADDOP        shift, and go to state 77
    T_OROP         shift, and go to state 78
    T_MULDIVANDOP  shift, and go to state 79
    T_EQU          shift, and go to state 80

    $default  reduce using rule 9 (constant_defs)


State 41

   17 expression: variable .
   23 variable: variable . T_LBRACK expressions T_RBRACK

    T_LBRACK  shift, and go to state 81

    $default  reduce using rule 17 (expression)


State 42

   20 expression: constant .

    $default  reduce using rule 20 (expression)


State 43

    8 constant_defs: constant_defs T_SEMI T_ID . T_EQU expression

    T_EQU  shift, and go to state 82


State 44

   66 sub_header: T_FUNCTION T_ID . formal_parameters T_COLON typename

    T_LPAREN  shift, and go to state 83

    $default  reduce using rule 70 (formal_parameters)

    formal_parameters  go to state 84


State 45

   67 sub_header: T_PROCEDURE T_ID . formal_parameters

    T_LPAREN  shift, and go to state 83

    $default  reduce using rule 70 (formal_parameters)

    formal_parameters  go to state 85


State 46

   24 variable: error .
   78 statements: error .

    T_END     reduce using rule 78 (statements)
    T_SEMI    reduce using rule 78 (statements)
    $default  reduce using rule 24 (variable)


State 47

   88 if_statement: T_IF . expression T_THEN statement T_SEMI
   89             | T_IF . expression T_THEN statement T_SEMI T_ELSE statement

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 86
    variable    go to state 41
    constant    go to state 42


State 48

   91 while_statement: T_WHILE . expression $@1 T_DO statement T_SEMI

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 87
    variable    go to state 41
    constant    go to state 42


State 49

   93 for_statement: T_FOR . T_ID T_ASSIGN iter_space $@2 T_DO statement

    T_ID  shift, and go to state 88


State 50

   98 io_statement: T_READ . T_LPAREN read_list T_RPAREN

    T_LPAREN  shift, and go to state 89


State 51

   99 io_statement: T_WRITE . T_LPAREN write_list T_RPAREN

    T_LPAREN  shift, and go to state 90


State 52

   22 variable: T_ID .
   96 subprogram_call: T_ID .
   97                | T_ID . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 91

    T_END     reduce using rule 96 (subprogram_call)
    T_SEMI    reduce using rule 96 (subprogram_call)
    $default  reduce using rule 22 (variable)


State 53

   23 variable: variable . T_LBRACK expressions T_RBRACK
   87 assignment: variable . T_ASSIGN expression

    T_LBRACK  shift, and go to state 81
    T_ASSIGN  shift, and go to state 92


State 54

   85 statement: comp_statement .

    $default  reduce using rule 85 (statement)


State 55

   75 comp_statement: T_BEGIN statements . T_END
   76 statements: statements . T_SEMI statement

    T_END   shift, and go to state 93
    T_SEMI  shift, and go to state 94


State 56

   77 statements: statement .

    $default  reduce using rule 77 (statements)


State 57

   79 statement: assignment .

    $default  reduce using rule 79 (statement)


State 58

   80 statement: if_statement .

    $default  reduce using rule 80 (statement)


State 59

   81 statement: while_statement .

    $default  reduce using rule 81 (statement)


State 60

   82 statement: for_statement .

    $default  reduce using rule 82 (statement)


State 61

   83 statement: subprogram_call .

    $default  reduce using rule 83 (statement)


State 62

   84 statement: io_statement .

    $default  reduce using rule 84 (statement)


State 63

   62 subprograms: subprograms subprogram T_SEMI .

    $default  reduce using rule 62 (subprograms)


State 64

   64 subprogram: sub_header T_SEMI . T_FORWARD
   65           | sub_header T_SEMI . declarations subprograms comp_statement

    error      shift, and go to state 7
    T_CONST    shift, and go to state 8
    T_FORWARD  shift, and go to state 95

    T_TYPE       reduce using rule 7 (constdefs)
    T_VAR        reduce using rule 7 (constdefs)
    T_FUNCTION   reduce using rule 7 (constdefs)
    T_PROCEDURE  reduce using rule 7 (constdefs)
    T_BEGIN      reduce using rule 7 (constdefs)

    declarations  go to state 96
    constdefs     go to state 10


State 65

    1 program: header declarations subprograms comp_statement T_DOT .

    $default  reduce using rule 1 (program)


State 66

   35 type_defs: T_ID T_EQU . type_def

    T_ARRAY   shift, and go to state 97
    T_ID      shift, and go to state 98
    T_BCONST  shift, and go to state 99
    T_CCONST  shift, and go to state 100
    T_ADDOP   shift, and go to state 101
    T_LPAREN  shift, and go to state 102

    $default  reduce using rule 49 (sign)

    type_def  go to state 103
    limit     go to state 104
    sign      go to state 105


State 67

   32 typedefs: T_TYPE type_defs T_SEMI .
   34 type_defs: type_defs T_SEMI . T_ID T_EQU type_def

    T_ID  shift, and go to state 106

    $default  reduce using rule 32 (typedefs)


State 68

   60 identifiers: T_ID .

    $default  reduce using rule 60 (identifiers)


State 69

   56 vardefs: T_VAR variable_defs . T_SEMI
   58 variable_defs: variable_defs . T_SEMI identifiers T_COLON typename

    T_SEMI  shift, and go to state 107


State 70

   59 variable_defs: identifiers . T_COLON typename
   61 identifiers: identifiers . T_COMMA T_ID

    T_COMMA  shift, and go to state 108
    T_COLON  shift, and go to state 109


State 71

   19 expression: T_LENGTH T_LPAREN . expression T_RPAREN

    error     shift, and go to state 29
    T_LENGTH  shift, and go to state 30
    T_ID      shift, and go to state 31
    T_SCONST  shift, and go to state 32
    T_ICONST  shift, and go to state 33
    T_RCONST  shift, and go to state 34
    T_BCONST  shift, and go to state 35
    T_CCONST  shift, and go to state 36
    T_ADDOP   shift, and go to state 37
    T_NOTOP   shift, and go to state 38
    T_LPAREN  shift, and go to state 39

    expression  go to state 110
    variable    go to state 41
    constant    go to state 42


State 72
